# exercise6

./: .gitignore  README.md  poisson.c
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  poisson  poisson-f
common/: CMakeCache.txt  common.c  common.h
poisson1d/: CMakeLists.txt  fst.f  poisson1d.c  poisson2d.c  poissoncommon.c
poisson1d/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  poisson1d
poisson1d/_build/common/: Makefile  cmake_install.cmake
poissonRewritten/: CMakeLists.txt  MPI_vs_runtime.txt  backup.c  job.sh  poison.o420364  poison.o420379  poison.o420396  poison_1proc_severalThreads.txt  poisson.c  poisson.o420376  poisson.o420830  poisson.o420844  poissonRewrite.c  poisson_pt36.text  poissoncommon.h  sequentialSolution.txt  setup.sh  someData.txt  speedupTests.txt  testTransposeMPIOMP.c
poissonRewritten/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  poissonRewrite  testTranspose
poissonRewritten/_build/common/: Makefile
poissonRewritten/results/: MPI_vs_runtime.m  error_vs_problem_size.m  error_vs_problem_size.txt  poisson_threadsAndRuntime.m  speedupTests.m
report/: forside.tex  report.out  report.tex  textfile.tex
